// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus Cpq-quote CPQ-QUOTE feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { cpqquoteTranslationChunksConfig, cpqquoteTranslationsEn } from "@spartacus/cpq-quote/assets";
import { CpqQuoteRootModule } from "@spartacus/cpq-quote/root";

@NgModule({
  declarations: [],
  imports: [
    CpqQuoteRootModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: cpqquoteTranslationsEn },
      chunks: cpqquoteTranslationChunksConfig,
    },
  })
  ]
})
export class CpqQuoteFeatureModule { }
"
`;

exports[`Spartacus Cpq-quote CPQ-QUOTE feature general setup should add the feature using the lazy loading syntax 2`] = `
"import { NgModule } from '@angular/core';
import { CartBaseModule } from "@spartacus/cart/base";
import { CpqQuoteModule } from "@spartacus/cpq-quote";

@NgModule({
  declarations: [],
  imports: [
    CartBaseModule,
    CpqQuoteModule
  ]
})
export class CartBaseWrapperModule { }
"
`;

exports[`Spartacus Cpq-quote eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { CpqQuoteModule } from "@spartacus/cpq-quote";
import { cpqquoteTranslationChunksConfig, cpqquoteTranslationsEn } from "@spartacus/cpq-quote/assets";
import { CpqQuoteRootModule } from "@spartacus/cpq-quote/root";

@NgModule({
  declarations: [],
  imports: [
    CpqQuoteRootModule,
    CpqQuoteModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: cpqquoteTranslationsEn },
      chunks: cpqquoteTranslationChunksConfig,
    },
  })]
})
export class CpqQuoteFeatureModule { }
"
`;
